// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextContainer should render correctly 1`] = `
<React.Fragment>
  <Text
    options={
      Object {
        "forceBlock": true,
        "overrides": Object {
          "a": Object {
            "component": [Function],
          },
          "em": Object {
            "component": [Function],
          },
          "p": Object {
            "component": [Function],
          },
          "strong": Object {
            "component": [Function],
          },
        },
      }
    }
    text="This is a 1st paragraph block."
  />
  <Text
    options={
      Object {
        "forceBlock": true,
        "overrides": Object {
          "a": Object {
            "component": [Function],
          },
          "em": Object {
            "component": [Function],
          },
          "p": Object {
            "component": [Function],
          },
          "strong": Object {
            "component": [Function],
          },
        },
      }
    }
    text="This is a 2nd paragraph block."
  />
  <Text
    options={
      Object {
        "forceBlock": true,
        "overrides": Object {
          "a": Object {
            "component": [Function],
          },
          "em": Object {
            "component": [Function],
          },
          "p": Object {
            "component": [Function],
          },
          "strong": Object {
            "component": [Function],
          },
        },
      }
    }
    text="This is a 3rd paragraph block."
  />
  <Text
    options={
      Object {
        "forceBlock": true,
        "overrides": Object {
          "a": Object {
            "component": [Function],
          },
          "em": Object {
            "component": [Function],
          },
          "p": Object {
            "component": [Function],
          },
          "strong": Object {
            "component": [Function],
          },
        },
      }
    }
    text="This is a 4th paragraph block.."
  />
  <Text
    options={
      Object {
        "forceBlock": true,
        "overrides": Object {
          "a": Object {
            "component": [Function],
          },
          "em": Object {
            "component": [Function],
          },
          "p": Object {
            "component": [Function],
          },
          "strong": Object {
            "component": [Function],
          },
        },
      }
    }
    text="This is a 5th paragraph block."
  />
</React.Fragment>
`;

exports[`TextContainer with a passed previous block type should render correctly 1`] = `
<React.Fragment>
  <hr />
  <Text
    options={
      Object {
        "forceBlock": true,
        "overrides": Object {
          "a": Object {
            "component": [Function],
          },
          "em": Object {
            "component": [Function],
          },
          "p": Object {
            "component": [Function],
          },
          "strong": Object {
            "component": [Function],
          },
        },
      }
    }
    text="This is a 1st paragraph block."
  />
  <Text
    options={
      Object {
        "forceBlock": true,
        "overrides": Object {
          "a": Object {
            "component": [Function],
          },
          "em": Object {
            "component": [Function],
          },
          "p": Object {
            "component": [Function],
          },
          "strong": Object {
            "component": [Function],
          },
        },
      }
    }
    text="This is a 2nd paragraph block."
  />
  <Text
    options={
      Object {
        "forceBlock": true,
        "overrides": Object {
          "a": Object {
            "component": [Function],
          },
          "em": Object {
            "component": [Function],
          },
          "p": Object {
            "component": [Function],
          },
          "strong": Object {
            "component": [Function],
          },
        },
      }
    }
    text="This is a 3rd paragraph block."
  />
  <Text
    options={
      Object {
        "forceBlock": true,
        "overrides": Object {
          "a": Object {
            "component": [Function],
          },
          "em": Object {
            "component": [Function],
          },
          "p": Object {
            "component": [Function],
          },
          "strong": Object {
            "component": [Function],
          },
        },
      }
    }
    text="This is a 4th paragraph block.."
  />
  <Text
    options={
      Object {
        "forceBlock": true,
        "overrides": Object {
          "a": Object {
            "component": [Function],
          },
          "em": Object {
            "component": [Function],
          },
          "p": Object {
            "component": [Function],
          },
          "strong": Object {
            "component": [Function],
          },
        },
      }
    }
    text="This is a 5th paragraph block."
  />
</React.Fragment>
`;
